<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="DuplicateIds">

    <Button
        android:id="@+id/button8"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="400dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="@android:color/black"
        android:onClick="AppSettings" />

    <Button
        android:id="@+id/button7"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="340dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="@android:color/black"
        android:onClick="GiftCard" />

    <Button
        android:id="@+id/button6"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="280dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="@android:color/black"
        android:onClick="FollowUs" />

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="20dp"
        android:text="@string/more"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="110dp"
        android:text="@string/inbox"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/CustomerService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="170dp"
        android:text="@string/customer_service"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="230dp"
        android:text="@string/store_locator"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:text="@string/follow_us"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="350dp"
        android:text="@string/gift_card"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="410dp"
        android:text="@string/app_settings"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="@android:color/black"
        android:onClick="Inbox" />

    <Button
        android:id="@+id/button4"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="160dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="@android:color/black"
        android:onClick="CustomerService" />

    <Button
        android:id="@+id/button5"
        android:layout_width="69dp"
        android:layout_height="33dp"
        android:layout_marginStart="290dp"
        android:layout_marginTop="220dp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawableTint="@android:color/black"
        android:onClick="StoreLocator" />

</RelativeLayout>